added css variables

--- a/springCreek-child/style.css
+++ b/springCreek-child/style.css
@@ -15,11 +15,17 @@
  Secondary - green - #56a31d
  Accent Color - White - #ffffff
  
-*/
 /*================================================================================================================
-Fonts
+Variables
 ================================================================================================================*/
 
+:root {
+  --even-tile-bg-color: #e1e9f4;
+  --odd-tile-bg-color: #cddbee;
+  --primary-color: #013c6c;
+  --secondary-color: #56a31d;
+  --accent-color: #ffffff;
+}
 
 /*================================================================================================================
 Theme specific coloring
